# reader2

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  compile_commands.json
addition/kernel-space_bal-module/: README.md
addition/kernel-space_bal-module/bal/: Makefile  bal.c
addition/kernel-space_bal-module/bal/include/linux/spi/: bal_spi.h
examples/: CMakeLists.txt  Makefile  cmake_install.cmake
examples/NfcrdlibEx1_BasicDiscoveryLoop/: CMakeLists.txt  Makefile  NfcrdlibEx1_BasicDiscoveryLoop.c  NfcrdlibEx1_BasicDiscoveryLoopPN512  NfcrdlibEx1_BasicDiscoveryLoopPN5180  NfcrdlibEx1_BasicDiscoveryLoopRC663  Readme.txt  cmake_install.cmake
examples/NfcrdlibEx1_BasicDiscoveryLoop/intfs/: cards.h
examples/NfcrdlibEx1_BasicDiscoveryLoop/src/: cards.c
examples/NfcrdlibEx2_AdvancedDiscoveryLoop/: CMakeLists.txt  Makefile  NfcrdlibEx2_AdvancedDiscoveryLoop.c  NfcrdlibEx2_AdvancedDiscoveryLoopPN512  NfcrdlibEx2_AdvancedDiscoveryLoopPN5180  NfcrdlibEx2_AdvancedDiscoveryLoopRC663  Readme.txt  cmake_install.cmake
examples/NfcrdlibEx2_AdvancedDiscoveryLoop/intfs/: cards.h
examples/NfcrdlibEx2_AdvancedDiscoveryLoop/src/: cards.c
examples/NfcrdlibEx3_NFCForum/: CMakeLists.txt  Makefile  NfcrdlibEx3_NFCForum.c  NfcrdlibEx3_NFCForumPN5180  Readme.txt  cmake_install.cmake
examples/NfcrdlibEx3_NFCForum/intfs/: NfcrdlibEx3_NFCForum.h  cards.h
examples/NfcrdlibEx3_NFCForum/src/: cards.c
examples/NfcrdlibEx4_MIFAREClassic/: CMakeLists.txt  Makefile  NfcrdlibEx4_MIFAREClassic.c  NfcrdlibEx4_MIFAREClassicPN512  NfcrdlibEx4_MIFAREClassicPN5180  NfcrdlibEx4_MIFAREClassicRC663  Readme.txt  cmake_install.cmake
examples/NfcrdlibEx5_ISO15693/: CMakeLists.txt  Makefile  NfcrdlibEx5_ISO15693.c  NfcrdlibEx5_ISO15693PN5180  NfcrdlibEx5_ISO15693RC663  Readme.txt  cmake_install.cmake
examples/NfcrdlibEx6_EMVCo_Loopback/: CMakeLists.txt  Makefile  NfcrdlibEx6_EMVCo_Loopback.c  NfcrdlibEx6_EMVCo_LoopbackPN512  NfcrdlibEx6_EMVCo_LoopbackPN5180  NfcrdlibEx6_EMVCo_LoopbackRC663  Readme.txt  cmake_install.cmake
examples/NfcrdlibEx7_EMVCo_Polling/: CMakeLists.txt  Makefile  NfcrdlibEx7_EMVCo_Polling.c  NfcrdlibEx7_EMVCo_PollingPN512  NfcrdlibEx7_EMVCo_PollingPN5180  NfcrdlibEx7_EMVCo_PollingRC663  Readme.txt  cmake_install.cmake
examples/NfcrdlibEx8_HCE_T4T/: CMakeLists.txt  Makefile  NfcrdlibEx8_HCE_T4T.c  NfcrdlibEx8_HCE_T4TPN5180  Readme.txt  cmake_install.cmake
examples/NfcrdlibEx8_HCE_T4T/intfs/: NfcrdlibEx8_HCE_T4T.h
examples/NfcrdlibEx9_NTagI2C/: CMakeLists.txt  Makefile  NfcrdlibEx9_NTagI2C.c  NfcrdlibEx9_NTagI2CPN512  NfcrdlibEx9_NTagI2CPN5180  NfcrdlibEx9_NTagI2CRC663  Readme.txt  cmake_install.cmake
examples/NfcrdlibEx9_NTagI2C/intfs/: phhwConfig.h
examples/NfcrdlibEx9_NTagI2C/src/: phHwConfig_Lpc11u68.c  phHwConfig_Lpc1769.c
linux/: CMakeLists.txt  Makefile  cmake_install.cmake
linux/comps/phOsal/src/Posix/: phOsal_Posix.c  phOsal_Posix_Int.h
linux/comps/phPlatform/src/Posix/: phPlatform.c  phPlatform.h
linux/comps/phbalReg/src/Linux/: phbalReg_Stub.c  phbalReg_Stub_Kernel.c  phbalReg_Stub_Utils.c  phbalReg_Stub_Utils.h
linux/intfs/: phOsal_Posix_Thread.h  ph_NxpBuild_App.h
linux/shared/: phhwConfig.c  phhwConfig.h
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
nxprdlib/NxpRdLib/: .cproject  .project
nxprdlib/NxpRdLib/comps/phCidManager/src/: phCidManager.c
nxprdlib/NxpRdLib/comps/phKeyStore/src/: phKeyStore.c  phKeyStore_Int.h
nxprdlib/NxpRdLib/comps/phLog/src/: phLog.c  phLog_Int.h
nxprdlib/NxpRdLib/comps/phTools/src/: phTools.c  phTools_Q.c
nxprdlib/NxpRdLib/comps/phacDiscLoop/src/: phacDiscLoop.c
nxprdlib/NxpRdLib/comps/phalFelica/src/: phalFelica.c  phalFelica_Int.h
nxprdlib/NxpRdLib/comps/phalI15693/src/: phalI15693.c
nxprdlib/NxpRdLib/comps/phalI18000p3m3/src/: phalI18000p3m3.c
nxprdlib/NxpRdLib/comps/phalMfc/src/: phalMfc.c  phalMfc_Int.c  phalMfc_Int.h
nxprdlib/NxpRdLib/comps/phalMfdf/src/: phalMfdf.c  phalMfdf_Int.c  phalMfdf_Int.h
nxprdlib/NxpRdLib/comps/phalMful/src/: phalMful.c  phalMful_Int.c  phalMful_Int.h
nxprdlib/NxpRdLib/comps/phalSli/src/: phalSli.c  phalSli_Int.h
nxprdlib/NxpRdLib/comps/phalT1T/src/: phalT1T.c
nxprdlib/NxpRdLib/comps/phalTop/src/: phalTop.c
nxprdlib/NxpRdLib/comps/phbalReg/src/: phbalReg.c
nxprdlib/NxpRdLib/comps/phceT4T/src/: phceT4T.c
nxprdlib/NxpRdLib/comps/phhalHw/src/: phhalHw.c
nxprdlib/NxpRdLib/comps/phlnLlcp/src/: phlnLlcp.c
nxprdlib/NxpRdLib/comps/phnpSnep/src/: phnpSnep.c
nxprdlib/NxpRdLib/comps/phpalEpcUid/src/: phpalEpcUid.c
nxprdlib/NxpRdLib/comps/phpalFelica/src/: phpalFelica.c
nxprdlib/NxpRdLib/comps/phpalI14443p3a/src/: phpalI14443p3a.c
nxprdlib/NxpRdLib/comps/phpalI14443p3b/src/: phpalI14443p3b.c
nxprdlib/NxpRdLib/comps/phpalI14443p4/src/: phpalI14443p4.c
nxprdlib/NxpRdLib/comps/phpalI14443p4a/src/: phpalI14443p4a.c
nxprdlib/NxpRdLib/comps/phpalI14443p4mC/src/: phpalI14443p4mC.c
nxprdlib/NxpRdLib/comps/phpalI18000p3m3/src/: phpalI18000p3m3.c
nxprdlib/NxpRdLib/comps/phpalI18092mPI/src/: phpalI18092mPI.c
nxprdlib/NxpRdLib/comps/phpalI18092mT/src/: phpalI18092mT.c
nxprdlib/NxpRdLib/comps/phpalMifare/src/: phpalMifare.c  phpalMifare_Int.h
nxprdlib/NxpRdLib/comps/phpalSli15693/src/: phpalSli15693.c
nxprdlib/NxpRdLib/intfs/: NxpRdLib_Ver.h  phCidManager.h  phKeyStore.h  phLog.h  phOsal.h  phTools.h  phacDiscLoop.h  phalFelica.h  phalI15693.h  phalI18000p3m3.h  phalMfc.h  phalMfdf.h  phalMful.h  phalSli.h  phalT1T.h  phalTop.h  phbalReg.h  phceT4T.h  phhalHw.h  phhalHw_Pn5180_Instr.h  phhalHw_Pn5180_Reg.h  phhalHw_Rc523_Cmd.h  phhalHw_Rc523_Reg.h  phhalHw_Rc663_Cmd.h  phhalHw_Rc663_Reg.h  phlnLlcp.h  phnpSnep.h  phpalEpcUid.h  phpalFelica.h  phpalI14443p3a.h  phpalI14443p3b.h  phpalI14443p4.h  phpalI14443p4a.h  phpalI14443p4mC.h  phpalI18000p3m3.h  phpalI18092mPI.h  phpalI18092mT.h  phpalMifare.h  phpalSli15693.h
nxprdlib/NxpRdLib/types/: ph_NxpBuild.h  ph_NxpBuild_Lpc.h  ph_NxpBuild_Pc.h  ph_RefDefs.h  ph_Status.h  ph_TypeDefs.h
(+140 files in other folders)
