add_subdirectory(NfcrdlibEx1_BasicDiscoveryLoop)
add_subdirectory(NfcrdlibEx2_AdvancedDiscoveryLoop)
add_subdirectory(NfcrdlibEx3_NFCForum)
add_subdirectory(NfcrdlibEx4_MIFAREClassic)
add_subdirectory(NfcrdlibEx5_ISO15693)
add_subdirectory(NfcrdlibEx6_EMVCo_Loopback)
add_subdirectory(NfcrdlibEx7_EMVCo_Polling)
add_subdirectory(NfcrdlibEx8_HCE_T4T)
add_subdirectory(NfcrdlibEx9_NTagI2C)
